--- a/3-CSS/Css/styles.css
+++ b/3-CSS/Css/styles.css
@@ -458,3 +458,55 @@ h2 {
   bottom: 10px;
   right: 10px;
 }
+
+/* fixed position */
+.fixed {
+  width: 100px;
+  height: 100px;
+  color: white;
+  background-color: black;
+  border: 1px dashed blue;
+  position: fixed;
+  top: 1px;
+  right: 1px;
+}
+
+/* sticky */
+.sticky {
+  width: 100px;
+  height: 100px;
+  background-color: #994;
+  border: 1px solid green;
+  position: sticky;
+  top: 10px;
+}
+
+/* z-index */
+.absolute-3,
+.absolute-4,
+.absolute-5 {
+  width: 50px;
+  height: 50px;
+  background-color: #5655a3;
+  position: absolute;
+}
+
+.absolute-3 {
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+}
+
+.absolute-4 {
+  top: 10px;
+  left: 10px;
+  background-color: #f80000;
+  z-index: 2;
+}
+
+.absolute-5 {
+  top: 40px;
+  left: 40px;
+  background-color: blue;
+  z-index: 1;
+}
